--- a/style/style.css
+++ b/style/style.css
@@ -4,16 +4,83 @@
 /* акцент #18A0FB */
 /* вторичный цвет фона #F5F5F5 */
 
+:root
+{
+    --primary-text-color: rgba(0, 0, 0, 0.8);
+    --title-text-color:  #000000;
+    --accent-color: #18A0FB;
+    --primary-white-color: #FFFFFF;
+}
 body
 {
-    background: #FFFFFF;
-    color:  rgba(0, 0, 0, 0.8);
+    background-color: var(--primary-white-color);
+    color: var(--primary-text-color);
 }
 .logo
 {
-    color: #000000;
+    color: var(--title-text-color);
+}
+.logo:hover
+{
+    color: var(--accent-color);
 }
 .list
 {
     list-style: none;
+}
+
+/* Site nav */
+.site-nav .link
+{
+    color: var(--accent-color);
+}
+.site-nav .link:hover,
+.site-nav .link:focus
+{
+    color: var(--title-text-color);
+}
+.site-nav .link.current
+{
+    color: var(--title-text-color);
+}
+
+/* Hero */
+.hero-title
+{
+    color: var(--title-text-color);
+}
+
+/* Section */
+.section-title
+{
+    color: var(--title-text-color);
+}
+
+/* Features */
+.feature-list .title
+{
+    color: var(--title-text-color);
+}
+
+/* Examples */
+.work-list .title
+{
+    color: var(--title-text-color);
+}
+
+/* Button */
+.button
+{
+    color: var(--title-text-color);
+    background-color: var(--primary-white-color);
+}
+.button.primary
+{
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+}
+.button.secondary
+{
+    color: var(--accent-color);
+    background-color: var(--primary-white-color);
 }
