--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,12 @@ body
     font-size: 18px;
     line-height: 1.67;
 }
+.list
+{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
 .container
 {
     margin-left: auto;
@@ -54,11 +60,11 @@ body
 {
     color: var(--accent-color);
 }
-.list
+/* Main nav */
+.main-nav
 {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+    display: flex;
+    align-items: center;
 }
 
 /* Page header */
@@ -68,13 +74,29 @@ body
 }
 
 /* Site nav */
+.site-nav
+{
+    display: flex;
+    margin-left: 70px;
+}
+.site-nav .item + .item
+{
+    margin-left: 40px;
+}
+/* .site-nav .item:not(:last-child)
+{
+    margin-right: 40px;
+} */
 .site-nav .link
 {
+    display: block;
     color: var(--accent-color);
     font-weight: 500;
     font-size: 15px;
     line-height: 1.2;
     text-decoration: none;
+    padding-top: 21px;
+    padding-bottom: 21px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus
@@ -84,6 +106,16 @@ body
 .site-nav .link.current
 {
     color: var(--title-text-color);
+}
+/* Auth nav */
+.auth-nav
+{
+    display: flex;
+    margin-left: auto;
+}
+.auth-nav .item + .item
+{
+    margin-left: 12px;
 }
 
 /* Hero */
@@ -127,7 +159,8 @@ body
     font-size: 48px;
     line-height: 1.5;
 }
-.section-title.centered
+.section-title.centered,
+.section-description.centered
 {
     text-align: center;
 }
@@ -141,6 +174,17 @@ body
 }
 
 /* Features и  Examples */
+.feature-list 
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin: -40px -75px;
+}
+.feature-list .item
+{
+    width: 625px; 
+    margin: 40px 75px;
+}
 .feature-list .title, 
 .work-list .title
 {
@@ -155,6 +199,8 @@ body
 /* Works */
 .work-list > .item
 {
+    display: flex;
+    align-items: center;
     padding-top: 80px;
     padding-bottom: 80px;
     background-color: var(--primary-white-color);
@@ -162,13 +208,38 @@ body
 
 .work-list > .item:nth-child(2n)
 {
+    flex-direction: row-reverse;
     background-color: var(--secondery-bg-color);
+}
+
+.work-list > .item:nth-child(2n + 1) > .content
+{
+    margin-left: 84px;
+}
+
+.work-list > .item:nth-child(2n) > .content
+{
+    margin-right: 84px;
 }
 
 .feature-list p
 {
     margin-top: 0;
     margin-bottom: 32px;
+}
+/* Clients */
+.client-list
+{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1020px;
+    margin: -30px -40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.client-list li
+{
+    margin: 30px 40px;
 }
 
 /* Button */
@@ -201,3 +272,48 @@ body
     background-color: var(--primary-white-color);
 }
 /* --------------------------------------------------------- */
+.test-container
+{
+   width: 1230px;
+   padding-left: 15px;
+   padding-right: 15px; 
+   margin-left: auto;
+   margin-right: auto;
+}
+.flex-container
+{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: teal;
+    margin: -15px;
+}
+.flex-element
+{
+    width: 380px;
+    margin: 15px;
+    background-color: tomato;
+
+    /* calc((100% - количество маржинов в строку * значение маржина) / количество элементов в строке) */
+    /* width: calc((100% - 60px) / 3); */
+    /* margin-right: 30px; */
+   /* margin-right: 30px;
+   margin-bottom: 30px; */
+}
+/* .flex-element:nth-child(3n)
+{
+    margin-right: 0;
+} */
+/* .flex-element:nth-last-child(-n + 3)
+{
+    margin-bottom: 0;
+}  */
+/* Альтернатива */
+/* .flex-element:not(:nth-child(3n))
+{
+    margin-right: 30px;
+} */
+
+/* .flex-element:not(:nth-last-child(-n + 3))
+{
+    margin-bottom: 30px;
+} */
