--- a/style/style.css
+++ b/style/style.css
@@ -352,3 +352,85 @@ body
 {
     background-color: teal;
 }
+.button
+{
+    padding: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    color: #2a2a2a;
+    border-radius: 50%;
+    background-color: teal;
+}
+.button:hover
+{
+    color: #fff;
+}
+.button-icon
+{
+    width: 64px;
+    height: 64px;
+    fill: currentColor;
+}
+/* ------------------------------------------- */
+.social
+{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+.social-item
+{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--color-iris);
+}
+.social-link
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-icon
+{
+    fill: currentColor;
+}
+
+/* .circle{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    border: 1px solid #000;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    justify-content: center;
+    -ms-align-items: center;
+    align-items: center;
+    color: #000;
+  } */
+
+  .circle {
+    width: 40px;
+    height: 40px;
+    gap: 24px;
+    border: 2px solid none;
+    border-radius: 50%;
+    background: #e1e1e1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px;
+  }
+  
+  .circle use {
+    margin: auto;
+  }
