--- a/style/style.css
+++ b/style/style.css
@@ -434,3 +434,50 @@ body
   .circle use {
     margin: auto;
   }
+
+  .box-1
+  {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background-color: red;
+    opacity: 0;
+  }
+
+  .box-2
+  {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 40px;
+    height: 40px;
+    background-color: green;
+  }
+/* ---------------------------------------------------- */
+  .backdrop
+  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 166, 0, 0.5);
+  }
+.backdrop.is-hidden
+{
+    opacity: 0;
+    pointer-events: none;
+}
+  .modal
+  {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    min-height: 400px;
+    min-width: 600px;
+    background-color: #fff; 
+  }
