--- a/style/style.css
+++ b/style/style.css
@@ -625,7 +625,7 @@ body
 {
     background-color: #d87093;
 }
-/*--------------form--------------------*/
+/*--------------form 1 --------------------*/
 .form
 {
     width: 600px;
@@ -639,8 +639,21 @@ body
     /* outline: 1px solid blue; */
     display: flex;
     flex-direction: column;
+}
+.form-field
+{
+    position: relative; 
     margin-bottom: 20px;
 }
+.form-label
+{
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    transform: translateY(-50%);
+    transition: transform 250ms linear;
+}
+
 .form-field label
 {
    margin-bottom: 5px; 
@@ -649,6 +662,7 @@ body
 {
     margin: 0;
     padding: 10px 20px;
+    padding-left: 40px;
     border-radius: 3px;
     border: 1px solid #44231d;
 }
@@ -699,4 +713,194 @@ body
 .comment
 {
     padding: 8px;
+}
+.form-input
+{
+    width: 100%;
+    margin: 0;
+    padding: 10px 20px;
+    padding-left: 40px;
+    font: inherit;
+    border-radius: 3px;
+    border: 1px solid #2a2a2a;
+}
+
+.form-input:focus + .form-label, 
+.form-input:not(:placeholder-shown) + .form-label
+{
+    color: tomato;
+    transform: translateY(-50px);
+}
+.icon
+{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+
+    transform: translateY(-50%);
+
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: tomato;
+}
+.form-input:focus ~ .icon
+{
+    background-color: blue;
+}
+/* -------------------form 2--------------------- */
+.form
+{
+    width: 600px;
+    padding: 20px;
+    margin: 20px;
+}
+.form-field
+{
+    position: relative;
+    margin-bottom: 20px;
+}
+.form-label
+{
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    transform: translateY(-50%);
+    transition: transform 250ms linear;
+}
+.form-input
+{
+    width: 100%;
+    margin: 0;
+    padding: 10px 20px;
+    padding-left: 40px;
+    font: inherit;
+    border-radius: 3px;
+    border: 1px solid #2a2a2a;
+}
+.icon
+{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+
+    transform: translateY(-50%);
+
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: tomato;
+}
+.form-field:focus-within > .icon
+{
+    background-color: blue;
+}
+.form-field:focus-within > .form-label
+{
+    transform: translateY(-50px);
+}
+/* ----------------------form 3-------------------------- */
+.form
+{
+    width: 600px;
+    padding: 20px;
+    margin: 20px;
+}
+.form-field
+{
+    position: relative;
+    display: block;
+    margin-bottom: 20px;
+}
+.form-label
+{
+    position: absolute;
+    top: 50%;
+    left: 40px;
+    transform: translateY(-50%);
+    transition: transform 250ms linear;
+}
+.form-input
+{
+    width: 100%;
+    margin: 0;
+    padding: 10px 20px;
+    padding-left: 40px;
+    font: inherit;
+    border-radius: 3px;
+    border: 1px solid #2a2a2a;
+}
+.icon
+{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+
+    transform: translateY(-50%);
+
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: tomato;
+}
+.form-field:focus-within > .icon
+{
+    background-color: blue;
+}
+.form-field:focus-within > .form-label,
+.form-input:not(:placeholder-shown) + .form-label
+{
+    transform: translateY(-50px);
+}
+/* -------------------checkbox------------------- */
+li{
+    margin-bottom: 10px;
+    list-style: none;
+}
+.field
+{
+    display: flex;
+    align-items: center;
+    /* outline: 1px solid black; */
+}
+.checkbox
+{
+    /* appearance: none;
+    position: absolute; */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.icon
+{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+    border: 2px solid #2a2a2a;
+    border-radius: 4px;
+    transition: transform 250ms linear;
+}
+.checkbox:checked + .icon
+{
+    transform: scale(1.2);
+    border-color: orange;
+    background-color: orange;
+    background-image: url('../images/icon.svg');
+    background-size: contain;
+    background-origin: border-box;
+}
+.lable
+{
+    transition: transform 250ms linear;
+}
+.checkbox:checked ~ .lable
+{
+    transform: translateX(20px);
 }
